--- a/src/common/CardSerie/CardSerie.css
+++ b/src/common/CardSerie/CardSerie.css
@@ -6,20 +6,35 @@
     justify-content: center;
     align-items: center;
 
-    height: 12em;
+    cursor: pointer;
+
+    height: 13em;
     width: 8em;
 
-    background-color: darkgrey;
+    background-color: rgb(0, 0, 0);
 
     color: white;
 
     border-radius: 1em;
 
     margin: 0.7em;
+    transition: 0.2s;
+}
+.cardSerieDesign:hover {
+
+    transition: 0.2s;
+    background-color: rgb(92, 91, 91);
 }
 
 .posterDesign {
 
-    height: 7em;
-    width: 5em;
+    border: 0.1em solid orangered;
+    border-radius: 0.5em;
+
+    height: 8em;
+    width: 6em;
+}
+.text {
+
+    text-align: center;
 }
