--- a/src/pages/User/Register/Register.css
+++ b/src/pages/User/Register/Register.css
@@ -9,5 +9,25 @@
     height: 85vh;
     width: 100vw;
 
-    background-color: lightcyan;
+    background-color: #454545;
+}
+
+.registerButtonDesign {
+
+    height: 3em;
+    width: 8em;
+
+    background-color: orange;
+    cursor: pointer;
+
+    border-radius: 1em;
+
+    transition: 0.3s;
+}
+
+.registerButtonDesign:hover {
+
+    transition: 0.3s;
+
+    background-color: darkorange;
 }
