--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -19,19 +19,24 @@
     justify-content: center;
     align-items: center;
 
-    background-color: darkcyan;
+    background-color: #000000;
+    border: 0.1em solid orangered;
 }
 
 .searchDesign {
 
     height: 15vh;
     width: 70vw;
+    
+    color: white;
+    cursor: pointer;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
-    background-color: darkcyan;
+    background-color: #000000;
+    border: 0.1em solid orangered;
 }
 
 .homeAvatar {
@@ -48,7 +53,8 @@
     justify-content: flex-end;
     align-items: flex-end;
 
-    background-color: darkcyan;
+    background-color: #000000;
+    border: 0.1em solid orangered;
 }
 
 .linkDesign {
