--- a/src/common/InputText/InputText.css
+++ b/src/common/InputText/InputText.css
@@ -1,8 +1,8 @@
 
 .inputDesign {
-
-    width: 8em;
-    border-radius: 1em;
-    background-color: lightslategrey;
-
+    
+    width: 20em;
+    height: 1.5em;
+    text-align: center;
+    border-radius: 8em;
 }
