--- a/src/pages/User/Login/Login.css
+++ b/src/pages/User/Login/Login.css
@@ -6,6 +6,9 @@
     justify-content: center;
     align-items: center;
 
+    font-weight: bold;
+    color: white;
+
     height: 85vh;
     width: 100vw;
 
@@ -19,6 +22,14 @@
 
     background-color: orange;
     cursor: pointer;
+
+    font-weight: bold;
+    color: #000000;
+
+    margin: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     border-radius: 1em;
 
