--- a/src/pages/User/Register/Register.css
+++ b/src/pages/User/Register/Register.css
@@ -6,6 +6,9 @@
     justify-content: center;
     align-items: center;
 
+    font-weight: bold;
+    color: white;
+
     height: 85vh;
     width: 100vw;
 
@@ -14,11 +17,19 @@
 
 .registerButtonDesign {
 
+    margin: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     height: 3em;
     width: 8em;
 
     background-color: orange;
     cursor: pointer;
+
+    font-weight: bold;
+    color: #000000;
 
     border-radius: 1em;
 
