--- a/src/common/InputText/InputText.css
+++ b/src/common/InputText/InputText.css
@@ -1,8 +1,20 @@
 
-.inputDesign {
+/* .inputDesign {
     
     width: 20em;
     height: 1.5em;
     text-align: center;
     border-radius: 8em;
+} */
+.inputDesign {
+
+    width: 20em;
+    height: 1.5em;
+    text-align: center;
+    border-radius: 8em;
+
+}
+
+.inputDesignError {
+    border: 0.2em solid red;
 }
