--- a/src/pages/User/Register/Register.css
+++ b/src/pages/User/Register/Register.css
@@ -34,6 +34,7 @@
     border-radius: 1em;
 
     transition: 0.3s;
+    box-shadow:-0.5px 0.5px 5px 5px rgb(237 225 0);
 }
 
 .registerButtonDesign:hover {
